Fix marquee letter spacing
I wish I could specify this relatively so it would apply
for all headings?

--- a/registrations/assets/css/waydowntown.scss
+++ b/registrations/assets/css/waydowntown.scss
@@ -44,6 +44,10 @@ h1 {
   }
 }
 
+h2 {
+  letter-spacing: -0.1rem;
+}
+
 .row.highlight {
   background: $secondary-color;
   margin: 1rem auto;
